--- a/app/views/custom/layouts/_header.html.erb
+++ b/app/views/custom/layouts/_header.html.erb
@@ -1,5 +1,5 @@
 <% launch_page ||= false %>
-<header class="js-stiky-header">
+<header>
   <div class="js-stiky-header top-bar-wrapper">
     <div class="top-bar">
       <div class="top-bar-title">
