--- a/app/components/custom/shared/resources_list.html.erb
+++ b/app/components/custom/shared/resources_list.html.erb
@@ -1,5 +1,5 @@
 <% body = capture do  %>
-  <% if @map_coordinates.present? && @standalone %>
+  <% if @map_coordinates.present? %>
     <div class="map resources-list--map not-print">
       <%= helpers.render_map(MapLocation.new(latitude: Setting['map.latitude'], longitude: Setting['map.longitude'], zoom: Setting['map.zoom']), @resources_name, false, nil, @map_coordinates, MapLayer.general.to_json) %>
     </div>
@@ -24,12 +24,6 @@
   <div class="u-main-column resources-list js-resources-list <%= class_names %>" data-resources-url="<%= @resources_url %>">
     <% if @standalone %>
       <h3 class="resources-list--title"><%= @title %></h3>
-    <% end %>
-
-    <% if @map_coordinates.present? && !@standalone %>
-      <div class="map resources-list--map not-print">
-        <%= helpers.render_map(MapLocation.new(latitude: Setting['map.latitude'], longitude: Setting['map.longitude'], zoom: Setting['map.zoom']), @resources_name, false, nil, @map_coordinates, MapLayer.general.to_json) %>
-      </div>
     <% end %>
 
     <div class="resources-list--navigation">
