--- a/app/assets/stylesheets/custom_design_v2/_header.scss
+++ b/app/assets/stylesheets/custom_design_v2/_header.scss
@@ -1,7 +1,15 @@
 .new-custom-design {
   header {
     padding: 0;
-    background: white !important;
+    background: transparent !important;
+    z-index: 100;
+  }
+
+  .jumbo {
+    position: relative;
+    top: -100px;
+    margin-left: -100px;
+    margin-right: -100px;
   }
 }
 body.new-custom-design > header .locale.locale-custom,
@@ -47,7 +55,7 @@ body.new-custom-design > header, .new-custom-design .wrapper > header {
     right: 0;
     top: 0;
     background: white;
-    z-index: 100;
+    z-index: 1000;
   }
 
   li#notifications {
@@ -105,6 +113,7 @@ body.new-custom-design > header, .new-custom-design .wrapper > header {
     height: 100px;
     display: flex;
     justify-content: flex-start !important;
+    background: transparent !important;
   }
 
   .top-bar .top-bar-title a img {
@@ -136,6 +145,7 @@ body.new-custom-design > header, .new-custom-design .wrapper > header {
 
   .subnavigation {
     width: 100%;
+    background: transparent;
   }
 
   .subnavigation ul li {
