--- a/app/views/custom/welcome/_header.html.erb
+++ b/app/views/custom/welcome/_header.html.erb
@@ -5,7 +5,11 @@
       .home-page .jumbo{
         background-image: url("<%= polymorphic_path(header_large.image.attachment) %>");
         background-size: cover;
-        background-position: center 25%;
+        background-position: top;
+      }
+
+      .top-bar-background-wrapper {
+        background: transparent;
       }
     <%end%>
   </style>
