--- a/app/assets/stylesheets/custom_design_v2/_header.scss
+++ b/app/assets/stylesheets/custom_design_v2/_header.scss
@@ -5,13 +5,43 @@
     z-index: 100;
   }
 
-  .jumbo {
-    position: relative;
-    top: -100px;
+  .homepage-image-header {
+    margin-top: -200px;
     margin-left: -100px;
     margin-right: -100px;
+    height: 500px;
+    margin-bottom: 50px;
+    position: relative;
+  }
+
+  .homepage-image-header--title {
+    opacity: 0.77;
+    background: white;
+    display: inline-block;
+    padding: 22px 30px;
+    line-height: 1.3;
+    color: #005A9F;
+    font-size: 32px;
+    margin-bottom: 30px;
+    border-radius: 4px;
+  }
+
+  .homepage-image-header--title-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    max-width: 1245px;
+    padding-top: 200px;
+    margin: auto;
+
+    .button {
+      font-size: 30px;
+      height: 55px;
+      padding: 0 30px;
+    }
   }
 }
+
 body.new-custom-design > header .locale.locale-custom,
 body.new-custom-design .wrapper > header .locale.locale-custom {
   height: 2.5rem;
@@ -40,7 +70,7 @@ body.new-custom-design .wrapper > header .locale.locale-custom {
 }
 
 body.new-custom-design > header, .new-custom-design .wrapper > header {
-  height: 100px;
+  height: 150px;
   max-width: auto;
 }
 
@@ -56,6 +86,10 @@ body.new-custom-design > header, .new-custom-design .wrapper > header {
     top: 0;
     background: white;
     z-index: 1000;
+
+    .top-bar {
+      height: 100px;
+    }
 
     .top-bar-background-wrapper {
       background: transparent !important;
@@ -114,7 +148,7 @@ body.new-custom-design > header, .new-custom-design .wrapper > header {
 
 
   .top-bar {
-    height: 100px;
+    height: 150px;
     display: flex;
     justify-content: flex-start !important;
     background: transparent !important;
