--- a/app/views/custom/welcome/_header.html.erb
+++ b/app/views/custom/welcome/_header.html.erb
@@ -1,8 +1,8 @@
 <% if header.present? %>
-  <%header_large = Widget::Card.header.find_by title: "header_large" %>
+  <% header_large = Widget::Card.header.find_by(title: "header_large") %>
   <style>
-    <%if header_large%>
-      .home-page .jumbo{
+    <%if header_large && !current_user.present? %>
+      .home-page .homepage-image-header{
         background-image: url("<%= polymorphic_path(header_large.image.attachment) %>");
         background-size: cover;
         background-position: top;
@@ -14,10 +14,19 @@
     <%end%>
   </style>
 
-  <div class="jumbo not-print">
-    <div class='jumbo-message'>
+  <% unless current_user.present? %>
+    <div class="homepage-image-header not-print">
+      <div class="homepage-image-header--title-wrapper">
+        <div class="homepage-image-header--title">
+          <div>
+            <%= Setting['org_name'] %>
+          </div>
+          <div>
+            <b><%= header_large.description %></b>
+          </div>
+        </div>
+        <%= link_to('Machen Sie mit!', '#', class: "button homepage-image-header--button") %>
+      </div>
     </div>
-  </div>
-
-  <div class="background-header"></div>
+  <% end %>
 <% end %>
