--- a/app/views/custom/layouts/_header.html.erb
+++ b/app/views/custom/layouts/_header.html.erb
@@ -16,7 +16,7 @@
   <div class="js-stiky-header top-bar-wrapper">
     <div class="top-bar-background-wrapper">
       <div class="top-bar">
-        <div class="top-bar-title">
+        <div class="top-bar--title">
           <%= link_to root_path do %>
             <%= image_tag(image_path_for("logo_header_2.png"), class: "", alt: t("layouts.header.logo")) %>
           <% end %>
