--- a/app/assets/stylesheets/custom_design_v2/_header.scss
+++ b/app/assets/stylesheets/custom_design_v2/_header.scss
@@ -151,18 +151,18 @@ body.new-custom-design > header, .new-custom-design .wrapper > header {
     height: 150px;
     display: flex;
     align-items: flex-start;
-    padding-top: 20px;
+    padding-top: 14px;
     justify-content: flex-start !important;
     background: transparent !important;
   }
 
-  .top-bar .top-bar-title a img {
-    max-height: 52px;
-    max-width: 52px;
-  }
-
-  .top-bar .top-bar-title {
+  .top-bar--title {
     flex-grow: initial;
+
+    a img {
+      max-height: 52px;
+      max-width: 52px;
+    }
   }
 
   .header--navigation {
