--- a/app/views/custom/layouts/_header.html.erb
+++ b/app/views/custom/layouts/_header.html.erb
@@ -23,7 +23,7 @@
         </div>
 
         <div id="navigation_bar" class="header--navigation expanded not-print">
-          <div class="hide-for-small-only">
+          <div class="hader--subnavigation-wrapper hide-for-small-only">
             <%= render partial: "shared/subnavigation", locals: { placement: 'desktop', launch_page: launch_page } %>
           </div>
 
