--- a/app/assets/stylesheets/custom_design_v2/_resources_list.scss
+++ b/app/assets/stylesheets/custom_design_v2/_resources_list.scss
@@ -25,13 +25,13 @@
     // width: 100%;
     flex-grow: 1;
     background: #c7c7c7;
-    margin-right: 17px;
     margin-top: 9px;
   }
 
   .resources-list--sort {
     display: flex;
     white-space: nowrap;
+    margin-left: 17px;
     // width: 220px;
 
     // .dropdown-container {
