--- a/app/components/custom/shared/resources_list.html.erb
+++ b/app/components/custom/shared/resources_list.html.erb
@@ -33,7 +33,7 @@
       <% if @load_resources_url.present? %>
         <div class="resources-list--sort">
           <div class="resources-list--sort-title">
-            Sortieren nach:
+            <%= @filter_title %>:
           </div>
           <%= render(
             Shared::DropdownMenuComponent.new(
