--- a/app/assets/stylesheets/custom/klaro.scss
+++ b/app/assets/stylesheets/custom/klaro.scss
@@ -10,6 +10,7 @@
         background-color: $accent;
         flex-grow: 1;
         min-height: 3rem;
+        color: $dark
       }
 
       .cm-btn.cm-btn-success {
