--- a/app/assets/stylesheets/custom_design_v2/_header.scss
+++ b/app/assets/stylesheets/custom_design_v2/_header.scss
@@ -161,7 +161,7 @@ body.new-custom-design > header, .new-custom-design .wrapper > header {
     height: 150px;
     display: flex;
     align-items: flex-start;
-    padding-top: 14px;
+    padding-top: 18px;
     justify-content: flex-start !important;
     background: transparent !important;
   }
@@ -182,7 +182,7 @@ body.new-custom-design > header, .new-custom-design .wrapper > header {
     width: 100%;
     height: 60px;
     background: transparent;
-    margin-top: 10px;
+    margin-top: 8px;
 
     ul li {
       margin-right: 0;
@@ -218,7 +218,8 @@ body.new-custom-design > header, .new-custom-design .wrapper > header {
   .user-notification--count {
     position: absolute;
     font-size: 14px;
-    bottom: 1px;
+    // bottom: 1px;
+    top: 12px;
     right: -37px;
     display: inline-block;
     width: 35px;
@@ -238,6 +239,12 @@ body.new-custom-design > header, .new-custom-design .wrapper > header {
     border-radius: 11px;
     padding-left: 12px;
     padding-right: calc(8px + 1em);
+    height: 25px;
+    font-size: 1rem;
+  }
+
+  .account-admin-items li#notifications {
+    margin-left: 0;
   }
 
   .locale.locale-custom {
