--- a/app/views/layouts/application_new.html.erb
+++ b/app/views/layouts/application_new.html.erb
@@ -12,11 +12,12 @@
 
     <%= raw setting["html.per_page_code_head"] %>
   </head>
-  <body class="<%= yield(:body_class) %> public">
+  <body class="<%= yield(:body_class) %> new-custom-design public">
     <%= raw setting["html.per_page_code_body"] %>
 
+    <%= render "layouts/header", with_subnavigation: true %>
+
     <div class="wrapper <%= yield(:wrapper_class) %>">
-      <%= render "layouts/header", with_subnavigation: true %>
 
       <% if request.headers["User-Agent"] =~ /MSIE/ && cookies["ie_alert_closed"] != "true" %>
       <!--[if lt IE 9]>
