--- a/app/views/custom/welcome/_header.html.erb
+++ b/app/views/custom/welcome/_header.html.erb
@@ -19,10 +19,10 @@
       <div class="homepage-image-header--title-wrapper">
         <div class="homepage-image-header--title">
           <div>
-            <%= Setting['org_name'] %>
+            <%= Setting["extended_option.general.title"] %>
           </div>
           <div>
-            <b><%= header_large.description %></b>
+            <b><%= Setting["extended_option.general.subtitle"] %></b>
           </div>
         </div>
         <%= link_to('Machen Sie mit!', '#', class: "button homepage-image-header--button") %>
