--- a/app/views/custom/welcome/_header.html.erb
+++ b/app/views/custom/welcome/_header.html.erb
@@ -1,32 +1,19 @@
 <% if header.present? %>
-  <% header_large = Widget::Card.header.find_by(title: "header_large") %>
+  <%header_large = Widget::Card.header.find_by title: "header_large" %>
   <style>
-    <%if header_large && !current_user.present? %>
-      .home-page .homepage-image-header{
+    <%if header_large%>
+      .home-page .jumbo{
         background-image: url("<%= polymorphic_path(header_large.image.attachment) %>");
         background-size: cover;
-        background-position: top;
-      }
-
-      .top-bar-background-wrapper {
-        background: transparent;
+        background-position: center 25%;
       }
     <%end%>
   </style>
 
-  <% unless current_user.present? %>
-    <div class="homepage-image-header not-print">
-      <div class="homepage-image-header--title-wrapper">
-        <div class="homepage-image-header--title">
-          <div>
-            <%= Setting["extended_option.general.title"] %>
-          </div>
-          <div>
-            <b><%= Setting["extended_option.general.subtitle"] %></b>
-          </div>
-        </div>
-        <%= link_to('Machen Sie mit!', '#', class: "button homepage-image-header--button") %>
-      </div>
+  <div class="jumbo not-print">
+    <div class='jumbo-message'>
     </div>
-  <% end %>
+  </div>
+
+  <div class="background-header"></div>
 <% end %>
