--- a/app/views/custom/welcome/index_new.html.erb
+++ b/app/views/custom/welcome/index_new.html.erb
@@ -12,7 +12,7 @@
 <% end %>
 
 <main>
-  <%= render "header", header: @header %>
+  <%= render "header_new", header: @header %>
 
   <div class="d-flex u-flex-container">
     <%= render_custom_block 'home_page_1' %>
