--- a/app/views/custom/pages/_sidebar_new.html.erb
+++ b/app/views/custom/pages/_sidebar_new.html.erb
@@ -38,7 +38,7 @@
           <i class="fas fa-tag"></i>
           SDGS
         </h4>
-        <%= render partial: 'pages/sidebar/sdgs', locals: { projekt: projekt } %>
+        <%= render partial: 'pages/sidebar/sdgs_new', locals: { projekt: projekt } %>
       </div>
     </div>
   <% end %>
@@ -50,7 +50,7 @@
           <i class="fas fa-tag"></i>
           Tags
         </h4>
-        <%= render partial: 'pages/sidebar/tags', locals: { projekt: projekt } %>
+        <%= render partial: 'pages/sidebar/tags_new', locals: { projekt: projekt } %>
       </div>
     </div>
   <% end %>
