--- a/app/assets/stylesheets/custom_design_v2/pages/projekts/_custom_page.scss
+++ b/app/assets/stylesheets/custom_design_v2/pages/projekts/_custom_page.scss
@@ -87,7 +87,8 @@
 
   .custom-page--banner-image {
     width: 630px;
-    object-fit: contain;
+    // object-fit: contain;
+    object-fit: cover;
     position: relative;
     bottom: -50px;
     height: 390px !important;
