--- a/app/views/custom/welcome/index_new.html.erb
+++ b/app/views/custom/welcome/index_new.html.erb
@@ -15,29 +15,28 @@
   <%= render "header_new", header: @header %>
 
   <div class="d-flex u-flex-container">
-    <%= render_custom_block 'home_page_1' %>
+    <div class="u-main-column">
+      <%= render_custom_block 'home_page_1' %>
+    </div>
     <%= render 'sidebar'  %>
   </div>
 
   <% if @active_projekts.any? %>
     <div class="d-flex u-flex-container">
       <%= render Projekts::List.new(projekts: @active_projekts, map_coordinates: @active_projekts_map_coordinates, current_filter: @current_projekt_filter, filters: @current_active_projekt_filters, load_resources_url: list_projekts_url) %>
-      <%= render 'sidebar'  %>
     </div>
   <% end %>
 
   <% if @cards.any? %>
-    <div class="column small-centered margin-bottom">
-      <div class="row">
-        <div class="small-12 column">
-          <%= render partial: "cards", locals: { cards: @cards, section_title: t("welcome.cards.title") } %>
-        </div>
+    <div class="d-flex u-flex-container">
+      <div class="u-main-column">
+        <%= render partial: "cards", locals: { cards: @cards, section_title: t("welcome.cards.title") } %>
       </div>
     </div>
   <% end %>
 
-  <div class="row">
-    <div class="column small-centered">
+  <div class="d-flex u-flex-container">
+    <div class="u-main-column">
       <%= render_custom_block 'home_page_2' %>
     </div>
   </div>
@@ -46,8 +45,8 @@
     <%= render Shared::ResourcesList.new(resources: @polls, title: t('custom.welcome.current_polls') , wide: false) %>
   <% end %>
 
-  <div class="row">
-    <div class="column small-centered">
+  <div class="d-flex u-flex-container">
+    <div class="u-main-column">
       <%= render_custom_block 'home_page_4' %>
     </div>
   </div>
@@ -56,8 +55,8 @@
     <%= render Shared::ResourcesList.new(resources: @latest_items, title: t('custom.welcome.user_entries'), wide: false) %>
   <% end %>
 
-  <div class="row">
-    <div class="column small-centered">
+  <div class="d-flex u-flex-container">
+    <div class="u-main-column">
       <%= render_custom_block 'home_page_5' %>
     </div>
   </div>
@@ -66,8 +65,8 @@
     <%= render Projekts::List.new(projekts: @expired_projekts, title: t("custom.welcome.expired_projekt_cards.title")) %>
   <% end %>
 
-  <div class="row">
-    <div class="column small-centered">
+  <div class="d-flex u-flex-container">
+    <div class="u-main-column">
       <%=render_custom_block 'home_page_6' %>
     </div>
   </div>
