--- a/app/views/custom/pages/_sidebar_new.html.erb
+++ b/app/views/custom/pages/_sidebar_new.html.erb
@@ -9,15 +9,17 @@
     </div>
   </div>
 
-  <div class="sidebar-card">
-    <div class="sidebar-card--section">
-      <h4 class="sidebar-card--header">
-        <i class="fas fa-info-circle"></i>
-        Administration
-      </h4>
-      <%= render partial: 'pages/sidebar/admin_controls' %>
+  <% if current_user && current_user.email.in?(@partner_emails) %>
+    <div class="sidebar-card">
+      <div class="sidebar-card--section">
+        <h4 class="sidebar-card--header">
+          <i class="fas fa-cog"></i>
+          Administration
+        </h4>
+        <%= render partial: 'pages/sidebar/admin_controls' %>
+      </div>
     </div>
-  </div>
+  <% end %>
 
   <% if projekt_feature?(@custom_page.projekt, "sidebar.show_phases_in_projekt_page_sidebar") %>
     <div class="sidebar-card">
