--- a/app/views/custom/welcome/_sidebar.html.erb
+++ b/app/views/custom/welcome/_sidebar.html.erb
@@ -30,43 +30,43 @@
     </div>
   </div>
 
-  <div class="sidebar-card">
-    <div class="sidebar-card--section">
-      <h4 class="sidebar-card--header">
-        <i class="fas fa-info-circle"></i>
-        Aktivität | letzte 7 Tage
-      </h4>
-      <div>
-        17 neue Benutzer*innen
-      </div>
-      <div>
-        20 neue Kommentare
-      </div>
-      <div>
-        4 neue Vorschläge
-      </div>
-      <div>
-        7 neue Diskussionen
-      </div>
-    </div>
-
-
-    <div class="sidebar-card--section sidebar-active-users-section">
-      <div>
-        <i class="far fa-lightbulb">
-        </i>
-        Zur Übersicht aller Vorschläge
-      </div>
-      <div>
-        <i class="far fa-comments">
-        </i>
-        Zur Übersicht aller Diskussionen
-      </div>
-      <div>
-        <i class="fas fa-vote-yea">
-        </i>
-        Zur Übersicht aller Abstimmungen
-      </div>
-    </div>
-  </div>
+  <!-- <div class="sidebar-card"> -->
+  <!--   <div class="sidebar-card--section"> -->
+  <!--     <h4 class="sidebar-card--header"> -->
+  <!--       <i class="fas fa-info-circle"></i> -->
+  <!--       Aktivität | letzte 7 Tage -->
+  <!--     </h4> -->
+  <!--     <div> -->
+  <!--       17 neue Benutzer*innen -->
+  <!--     </div> -->
+  <!--     <div> -->
+  <!--       20 neue Kommentare -->
+  <!--     </div> -->
+  <!--     <div> -->
+  <!--       4 neue Vorschläge -->
+  <!--     </div> -->
+  <!--     <div> -->
+  <!--       7 neue Diskussionen -->
+  <!--     </div> -->
+  <!--   </div> -->
+  <!--  -->
+  <!--  -->
+  <!--   <div class="sidebar-card--section sidebar-active-users-section"> -->
+  <!--     <div> -->
+  <!--       <i class="far fa-lightbulb"> -->
+  <!--       </i> -->
+  <!--       Zur Übersicht aller Vorschläge -->
+  <!--     </div> -->
+  <!--     <div> -->
+  <!--       <i class="far fa-comments"> -->
+  <!--       </i> -->
+  <!--       Zur Übersicht aller Diskussionen -->
+  <!--     </div> -->
+  <!--     <div> -->
+  <!--       <i class="fas fa-vote-yea"> -->
+  <!--       </i> -->
+  <!--       Zur Übersicht aller Abstimmungen -->
+  <!--     </div> -->
+  <!--   </div> -->
+  <!-- </div> -->
 </div>
