--- a/app/assets/stylesheets/custom_design_v2/_header.scss
+++ b/app/assets/stylesheets/custom_design_v2/_header.scss
@@ -171,7 +171,7 @@ body.new-custom-design > header, .new-custom-design .wrapper > header {
 
     a img {
       max-height: 52px;
-      max-width: 52px;
+      // max-width: 52px;
     }
   }
 
