--- a/app/views/custom/layouts/_header_new.html.erb
+++ b/app/views/custom/layouts/_header_new.html.erb
@@ -18,7 +18,7 @@
       <div class="top-bar">
         <div class="top-bar--title">
           <%= link_to root_path do %>
-            <%= image_tag(image_path_for("logo_header_2.png"), class: "", alt: t("layouts.header.logo")) %>
+            <%= image_tag(image_path_for("logo_header.png"), alt: setting["org_name"]) %>
           <% end %>
         </div>
 
